[package]
name = "notion_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.52"
tokio = "1.15.0"
clap = { version = "3.1.6", features = ["derive", "env", "unicode"] }
notion = "0.3.4"
queues = "1.1.0"